--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+      text-decoration: none;
+    }
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
   <script>
@@ -14,7 +20,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html" style="color:skyblue;text-decoration:underline">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
