--- a/1.html
+++ b/1.html
@@ -3,6 +3,12 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+      text-decoration: none;
+    }
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
   <script>
@@ -17,7 +23,7 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
+    <li><a href="1.html" style="color:skyblue;text-decoration:underline">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
