--- a/2.html
+++ b/2.html
@@ -3,6 +3,12 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+      text-decoration: none;
+    }
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
   <script>
@@ -17,9 +23,17 @@
   <h1><a href="index.html">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="2.html" style="color:skyblue;text-decoration:underline">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
+<!--
+  <h1><a href="index.html"><font color="skyblue">WEB</font></a></h1>
+  <ol>
+    <li><a href="1.html"><font color="skyblue">HTML</font></a></li>
+    <li><a href="2.html"><font color="skyblue">CSS</font></a></li>
+    <li><a href="3.html"><font color="skyblue">JavaScript</font></a></li>
+  </ol>
+-->
   <h2>CSS</h2>
   <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 
