--- a/3.html
+++ b/3.html
@@ -3,6 +3,12 @@
 <head>
   <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
+  <style>
+    a{
+      color:black;
+      text-decoration: none;
+    }
+  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
   <script>
@@ -18,7 +24,7 @@
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="3.html" style="color:skyblue;text-decoration:underline">JavaScript</a></li>
   </ol>
   <h2>JavaScript</h2>
   <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.</p>
