--- a/3.html
+++ b/3.html
@@ -8,6 +8,10 @@
       color:black;
       text-decoration: none;
     }
+    h1{
+      font-size:60px;
+      text-align: center;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
