--- a/2.html
+++ b/2.html
@@ -8,6 +8,12 @@
       color:black;
       text-decoration: none;
     }
+    .saw{
+      color:gray;
+    }
+    #active{
+      color:skyblue;
+    }
     h1{
       font-size:60px;
       text-align: center;
@@ -26,9 +32,9 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html" style="color:skyblue;text-decoration:underline">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw" id="active">CSS</a></li>
+    <li><a href="3.html" class="saw">JavaScript</a></li>
   </ol>
 <!--
   <h1><a href="index.html"><font color="skyblue">WEB</font></a></h1>
@@ -39,6 +45,9 @@
   </ol>
 -->
   <h2>CSS</h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8-rCMmamtDE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </p>
   <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 
   <img src="CSS.png" height="450">
