--- a/1.html
+++ b/1.html
@@ -8,6 +8,12 @@
       color:black;
       text-decoration: none;
     }
+    .saw{
+      color:gray;
+    }
+    #active{
+      color:skyblue;
+    }
     h1{
       font-size:60px;
       text-align: center;
@@ -27,9 +33,9 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html" style="color:skyblue;text-decoration:underline">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html" class="saw" id="active">HTML</a></li>
+    <li><a href="2.html" class="saw">CSS</a></li>
+    <li><a href="3.html" class="saw">JavaScript</a></li>
   </ol>
   <h2>HTML</h2>
   <p>
