--- a/3.html
+++ b/3.html
@@ -8,6 +8,12 @@
       color:black;
       text-decoration: none;
     }
+    .saw{
+      color:gray;
+    }
+    #active{
+      color:skyblue;
+    }
     h1{
       font-size:60px;
       text-align: center;
@@ -26,9 +32,9 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html" style="color:skyblue;text-decoration:underline">JavaScript</a></li>
+    <li><a href="1.html" class="saw">HTML</a></li>
+    <li><a href="2.html" class="saw">CSS</a></li>
+    <li><a href="3.html" class="saw" id="active">JavaScript</a></li>
   </ol>
   <h2>JavaScript</h2>
   <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.</p>
