--- a/1.html
+++ b/1.html
@@ -15,7 +15,11 @@
       color:skyblue;
     }
     h1{
+      border:5px solid yellowgreen;
+      padding:10px;
       font-size:60px;
+      margin:auto;
+      width:50%;
       text-align: center;
     }
   </style>
