--- a/2.html
+++ b/2.html
@@ -4,6 +4,9 @@
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
   <style>
+    /*
+    inline element
+    */
     a{
       color:black;
       text-decoration: none;
@@ -14,8 +17,15 @@
     #active{
       color:skyblue;
     }
+    /*
+    block level element
+    */
     h1{
+      border:5px solid yellowgreen;
+      padding:10px;
       font-size:60px;
+      margin:auto;
+      width:50%;
       text-align: center;
     }
   </style>
