--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
       color:skyblue;
     }
     h1{
+      border:5px solid yellowgreen;
+      padding:10px;
       font-size:60px;
-      text-align:center;
+      margin:auto;
+      width:50%;
+      text-align: center;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
