--- a/2.html
+++ b/2.html
@@ -4,29 +4,32 @@
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
   <style>
-    /*
-    inline element
-    */
+    body{
+      margin:0;
+    }
     a{
       color:black;
       text-decoration: none;
     }
-    .saw{
-      color:gray;
-    }
     #active{
       color:skyblue;
     }
-    /*
-    block level element
-    */
+    .saw{
+      color:gray;
+    }
     h1{
-      border:5px solid yellowgreen;
-      padding:10px;
       font-size:60px;
-      margin:auto;
-      width:50%;
+      margin:0;
       text-align: center;
+      border-bottom:2px solid gray;
+      padding:30px;
+    }
+    ol{
+      border-right:2px solid gray;
+      margin-left:20px;
+      margin-top:0;
+      padding:20px;
+      width:100px;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
