--- a/2.html
+++ b/2.html
@@ -31,6 +31,10 @@
       padding:20px;
       width:100px;
     }
+    #grid{
+      display:grid;
+      grid-template-columns:200px 1fr;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
@@ -44,26 +48,25 @@
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html" class="saw">HTML</a></li>
-    <li><a href="2.html" class="saw" id="active">CSS</a></li>
-    <li><a href="3.html" class="saw">JavaScript</a></li>
-  </ol>
-<!--
-  <h1><a href="index.html"><font color="skyblue">WEB</font></a></h1>
-  <ol>
-    <li><a href="1.html"><font color="skyblue">HTML</font></a></li>
-    <li><a href="2.html"><font color="skyblue">CSS</font></a></li>
-    <li><a href="3.html"><font color="skyblue">JavaScript</font></a></li>
-  </ol>
--->
-  <h2>CSS</h2>
-  <p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8-rCMmamtDE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  </p>
-  <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 
-  <img src="CSS.png" height="450">
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw">HTML</a></li>
+      <li><a href="2.html" class="saw" id="active">CSS</a></li>
+      <li><a href="3.html" class="saw">JavaScript</a></li>
+    </ol>
+
+    <div>
+      <h2>CSS</h2>
+      <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+      </p>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/8-rCMmamtDE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </p>
+    </div>
+  </div>
+
+
 
   <p>
     <div id="disqus_thread"></div>
