--- a/3.html
+++ b/3.html
@@ -31,6 +31,10 @@
       padding:20px;
       width:100px;
     }
+    #grid{
+      display:grid;
+      grid-template-columns:200px 1fr;
+    }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
@@ -44,15 +48,19 @@
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html" class="saw">HTML</a></li>
-    <li><a href="2.html" class="saw">CSS</a></li>
-    <li><a href="3.html" class="saw" id="active">JavaScript</a></li>
-  </ol>
-  <h2>JavaScript</h2>
-  <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.</p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw">HTML</a></li>
+      <li><a href="2.html" class="saw">CSS</a></li>
+      <li><a href="3.html" class="saw" id="active">JavaScript</a></li>
+    </ol>
 
-  <img src="JavaScript.png" height="450">
+    <div>
+      <h2>JavaScript</h2>
+      <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
+      </p>
+    </div>
+  </div>
 
   <p>
     <div id="disqus_thread"></div>
