--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
       text-decoration:underline;
     }
     #active{
-      color:skyblue;
+      color:#FA5858;
     }
     .saw{
       color:gray;
@@ -27,6 +27,14 @@
       border-bottom:2px solid gray;
       padding:30px;
     }
+    h2{
+      color:#FA5858;
+    }
+    h4{
+      color:yellowgreen;
+      margin:0;
+      margin-bottom:10px;
+    }
     ol{
       border-right:2px solid gray;
       margin-left:20px;
@@ -36,7 +44,7 @@
     }
     #grid{
       display:grid;
-      grid-template-columns:200px 1fr;
+      grid-template-columns:200px 0.7fr;
     }
 
   </style>
@@ -55,6 +63,7 @@
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
     <ol>
+      <h4>contents</h4>
       <li><a href="1.html" class="saw" id="active">HTML</a></li>
       <li><a href="2.html" class="saw">CSS</a></li>
       <li><a href="3.html" class="saw">JavaScript</a></li>
