--- a/2.html
+++ b/2.html
@@ -24,6 +24,14 @@
       border-bottom:2px solid gray;
       padding:30px;
     }
+    h2{
+      color:skyblue;
+    }
+    h4{
+      color:yellowgreen;
+      margin:0;
+      margin-bottom:10px;
+    }
     ol{
       border-right:2px solid gray;
       margin-left:20px;
@@ -33,7 +41,7 @@
     }
     #grid{
       display:grid;
-      grid-template-columns:200px 1fr;
+      grid-template-columns:200px 0.7fr;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -51,6 +59,7 @@
 
   <div id="grid">
     <ol>
+      <h4>contents</h4>
       <li><a href="1.html" class="saw">HTML</a></li>
       <li><a href="2.html" class="saw" id="active">CSS</a></li>
       <li><a href="3.html" class="saw">JavaScript</a></li>
@@ -58,8 +67,22 @@
 
     <div>
       <h2>CSS</h2>
-      <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+
+      <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]
       </p>
+
+      <p>CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content.
+      </p>
+
+      <p>Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.[4]
+      </p>
+
+      <p>The name cascading comes from the specified priority scheme to determine which style rule applies if more than one rule matches a particular element. This cascading priority scheme is predictable.
+      </p>
+
+      <p>The CSS specifications are maintained by the World Wide Web Consortium (W3C). Internet media type (MIME type) text/css is registered for use with CSS by RFC 2318 (March 1998). The W3C operates a free CSS validation service for CSS documents.[5]
+      </p>
+
       <p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8-rCMmamtDE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
       </p>
