--- a/3.html
+++ b/3.html
@@ -12,7 +12,7 @@
       text-decoration: none;
     }
     #active{
-      color:skyblue;
+      color:orange;
     }
     .saw{
       color:gray;
@@ -24,6 +24,14 @@
       border-bottom:2px solid gray;
       padding:30px;
     }
+    h2{
+      color:orange;
+    }
+    h4{
+      color:yellowgreen;
+      margin:0;
+      margin-bottom:10px;
+    }
     ol{
       border-right:2px solid gray;
       margin-left:20px;
@@ -33,7 +41,7 @@
     }
     #grid{
       display:grid;
-      grid-template-columns:200px 1fr;
+      grid-template-columns:200px 0.7fr;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -50,6 +58,7 @@
   <h1><a href="index.html">WEB</a></h1>
   <div id="grid">
     <ol>
+      <h4>contents</h4>
       <li><a href="1.html" class="saw">HTML</a></li>
       <li><a href="2.html" class="saw">CSS</a></li>
       <li><a href="3.html" class="saw" id="active">JavaScript</a></li>
@@ -58,6 +67,18 @@
     <div>
       <h2>JavaScript</h2>
       <p>JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
+      </p>
+
+      <p>Alongside HTML and CSS, JavaScript is one of the three core technologies of the World Wide Web.[8] JavaScript enables interactive web pages and thus is an essential part of web applications. The vast majority of websites use it,[9] and all major web browsers have a dedicated JavaScript engine to execute it.
+      </p>
+
+      <p>As a multi-paradigm language, JavaScript supports event-driven, functional, and imperative (including object-oriented and prototype-based) programming styles. It has an API for working with text, arrays, dates, regular expressions, and basic manipulation of the DOM, but the language itself does not include any I/O, such as networking, storage, or graphics facilities, relying for these upon the host environment in which it is embedded.
+      </p>
+
+      <p>Initially only implemented client-side in web browsers, JavaScript engines are now embedded in many other types of host software, including server-side in web servers and databases, and in non-web programs such as word processors and PDF software, and in runtime environments that make JavaScript available for writing mobile and desktop applications, including desktop widgets.
+      </p>
+
+      <p>Although there are strong outward similarities between JavaScript and Java, including language name, syntax, and respective standard libraries, the two languages are distinct and differ greatly in design; JavaScript was influenced by programming languages such as Self and Scheme. [10]
       </p>
     </div>
   </div>
