--- a/1.html
+++ b/1.html
@@ -35,7 +35,7 @@
       margin:0;
       margin-bottom:10px;
     }
-    ol{
+    #grid ol{
       border-right:2px solid gray;
       margin-left:20px;
       margin-top:0;
