--- a/1.html
+++ b/1.html
@@ -3,50 +3,14 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <style>
-    body{
-      margin:0;
-    }
-    a{
-      color:black;
-      text-decoration: none;
-    }
-    .underline_a{
-      text-decoration:underline;
-    }
     #active{
-      color:#FA5858;
-    }
-    .saw{
-      color:gray;
-    }
-    h1{
-      font-size:60px;
-      margin:0;
-      text-align: center;
-      border-bottom:2px solid gray;
-      padding:30px;
+      color:#ff7373;
     }
     h2{
-      color:#FA5858;
+      color:#ff7373;
     }
-    h4{
-      color:yellowgreen;
-      margin:0;
-      margin-bottom:10px;
-    }
-    #grid ol{
-      border-right:2px solid gray;
-      margin-left:20px;
-      margin-top:0;
-      padding:20px;
-      width:100px;
-    }
-    #grid{
-      display:grid;
-      grid-template-columns:200px 0.7fr;
-    }
-
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
