--- a/3.html
+++ b/3.html
@@ -3,45 +3,13 @@
 <head>
   <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <style>
-    body{
-      margin:0;
-    }
-    a{
-      color:black;
-      text-decoration: none;
-    }
     #active{
-      color:orange;
-    }
-    .saw{
-      color:gray;
-    }
-    h1{
-      font-size:60px;
-      margin:0;
-      text-align: center;
-      border-bottom:2px solid gray;
-      padding:30px;
+      color:#ffd700;
     }
     h2{
-      color:orange;
-    }
-    h4{
-      color:yellowgreen;
-      margin:0;
-      margin-bottom:10px;
-    }
-    #grid ol{
-      border-right:2px solid gray;
-      margin-left:20px;
-      margin-top:0;
-      padding:20px;
-      width:100px;
-    }
-    #grid{
-      display:grid;
-      grid-template-columns:200px 0.7fr;
+      color:#ffd700;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
