--- a/index.html
+++ b/index.html
@@ -3,49 +3,13 @@
 <head>
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <style>
-    body{
-      margin:0;
-    }
-    a{
-      color:black;
-      text-decoration: none;
-    }
-    .saw{
-      color:gray;
-    }
-    h1{
-      font-size:60px;
-      margin:0;
-      text-align: center;
-      border-bottom:2px solid gray;
-      padding:30px;
+    .title{
+      color:navy;
     }
     h2{
       color:navy;
-    }
-    h3{
-      font-weight:lighter;
-    }
-    .welcome{
-      color:navy;
-      font-weight:lighter;
-    }
-    h4{
-      color:yellowgreen;
-      margin:0;
-      margin-bottom:10px;
-    }
-    #grid ol{
-      border-right:2px solid gray;
-      margin-left:20px;
-      margin-top:0;
-      padding:20px;
-      width:100px;
-    }
-    #grid{
-      display:grid;
-      grid-template-columns:200px 0.7fr;
     }
   </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -59,7 +23,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html" class="title">WEB</a></h1>
   <div id="grid">
     <ol>
       <h4>contents</h4>
