--- a/1.html
+++ b/1.html
@@ -24,16 +24,30 @@
 </head>
 
 <body>
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html" class="title">WEB</a></h1>
 
   <div id="grid">
-    <ol>
-      <h4>contents</h4>
-      <li><a href="1.html" class="saw" id="active">HTML</a></li>
-      <li><a href="2.html" class="saw">CSS</a></li>
-      <li><a href="3.html" class="saw">JavaScript</a></li>
-    </ol>
-    
+    <div class="contents">
+      <ol>
+        <h4>contents</h4>
+        <li><a href="1.html" class="saw" id="active">HTML</a></li>
+        <li><a href="2.html" class="saw">CSS</a></li>
+        <li><a href="3.html" class="saw">JavaScript</a></li>
+      </ol>
+      <input type="button" value="night" onclick="
+        document.querySelector('body').style.backgroundColor='black';
+        document.querySelector('body').style.color='white';
+        document.querySelector('.title').style.color='white';
+        document.querySelector('u').style.color='white';
+      ">
+      <input type="button" value="day" onclick="
+        document.querySelector('body').style.backgroundColor='white';
+        document.querySelector('body').style.color='black';
+        document.querySelector('.title').style.color='black';
+        document.querySelector('u').style.color='black';
+      ">
+    </div>
+
     <div>
       <h2>HTML</h2>
       <p>
