--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
   <title>WEB1 - Welcome</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="style.css">
-  <style>
-    .title{
-      color:navy;
-    }
-    h2{
-      color:navy;
-    }
-  </style>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124724688-1"></script>
   <script>
@@ -23,18 +15,29 @@
 </head>
 
 <body>
-  <h1><a href="index.html" class="title">WEB</a></h1>
+  <h1><a href="index.html" id="welcome" class="title">WEB</a></h1>
   <div id="grid">
-    <ol>
-      <h4>contents</h4>
-      <li><a href="1.html" class="saw">HTML</a></li>
-      <li><a href="2.html" class="saw">CSS</a></li>
-      <li><a href="3.html" class="saw">JavaScript</a></li>
-    </ol>
-
+    <div class="contents">
+      <ol>
+        <h4>contents</h4>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw">CSS</a></li>
+        <li><a href="3.html" class="saw">JavaScript</a></li>
+      </ol>
+      <input type="button" value="night" onclick="
+        document.querySelector('body').style.backgroundColor='black';
+        document.querySelector('body').style.color='white';
+        document.querySelector('.title').style.color='white';
+      ">
+      <input type="button" value="day" onclick="
+        document.querySelector('body').style.backgroundColor='white';
+        document.querySelector('body').style.color='black';
+        document.querySelector('.title').style.color='black';
+      ">
+    </div>
     <div>
       <h2>WEB</h2>
-      <h3 class="welcome">Welcome to my Website!!!<h3>
+      <h3>Welcome to my Website!!!</h3>
       <img src="coding.jpg" height="450">
 
       <p>The World Wide Web (WWW), also called the Web, is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and accessible via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser in 1990 while employed at CERN in Switzerland.[2][3] The browser was released outside CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
